# minimp4.rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: minimp4.yml
minimp4-sys/: Cargo.toml  build.rs  minimp4.c  minimp4.h
src/: lib.rs  main.rs  writer.rs
src/fixtures/: input.264
