[package]
name = "minimp4"
version = "0.1.1"
authors = ["DarkSky"]
edition = "2021"
description = "A minimp4 Rust binding"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]
license = "AGPL-3.0-or-later"
homepage = "https://github.com/darkskygit/minimp4.rs"
readme = "README.md"
keywords = ["minimp4", "mp4", "muxer", "h264", "h265"]
repository = "https://github.com/darkskygit/minimp4.rs"

[dependencies]
libc = "0.2.140"
minimp4-sys = { path = "minimp4-sys" }
fdk-aac-sys = "0.4.0"
